--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,17 +1,17 @@
-primary_name: "Your Name"
+primary_name: "Yingyi Zhang"
 secondary_name: ""
-navbar_name: "Your Name"
+navbar_name: "Yingyi Zhang"
 
 positions:
-- name: Position without logo
-- logo: /assets/images/badges/PKU_red.png
-  name: B.S., Peking University (2021)
+- name: PhD. candidate 
+- logo: /assets/images/badges/logo.png
+  name: Joint PhD. of DUT and CityU (2022~)
 
-email: "your@email.com"
-# cv_link: link-to-your-cv-file
-gscholar: your_google_scholar_id
-github: your_github_id
-twitter: your_twitter_id
+email: "yingyizhang@mail.dlut.edu.cn"
+cv_link: /assets/YingyiZhang_CV.pdf
+gscholar: qCD3ObkAAAAJ
+# github: your_github_id
+# twitter: your_twitter_id
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
@@ -23,7 +23,7 @@ short_bio: >-
   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 
-portrait_url: /assets/images/photos/portrait.jpg
+portrait_url: /assets/images/photos/zyy.png
 portrait_caption: >-
   Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
