--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,22 +1,22 @@
-"Your Name":
+"Yingyi Zhang":
   bold: true
 
-"Robert White":
-  url: https://www.google.com/?q=Robert+White
+"Xianneng Li":
+  url: http://faculty.dlut.edu.cn/li/zh_CN/index.htm
 
-"Charles Green (MIT)":
-  name: Charles Green
-  url: https://www.google.com/?q=Charles+Green+MIT
+"Xiangyu Zhao":
+  # name: Charles Green
+  url: https://zhaoxyai.github.io/
 
-"Charles Green (Stanford)":
-  name: Charles Green
-  url: https://www.google.com/?q=Charles+Green+Stanford
+# "Charles Green (Stanford)":
+#   name: Charles Green
+#   url: https://www.google.com/?q=Charles+Green+Stanford
 
-"Garrett Harris":
-  url: https://www.google.com/?q=Garrett+Harris
+# "Garrett Harris":
+#   url: https://www.google.com/?q=Garrett+Harris
 
-"James Wang":
-  url: https://www.google.com/?q=James+Wang
+# "James Wang":
+#   url: https://www.google.com/?q=James+Wang
 
-"John Doe":
-  url: https://www.google.com/?q=John+Doe
+# "John Doe":
+#   url: https://www.google.com/?q=John+Doe
