--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -27,7 +27,7 @@ portrait_caption: >-
 
 education:
 - name: City University of Hong Kong
-  logo: /assets/images/badges/cityu_logo.png
+  logo: /assets/images/badges/cityu_logo.jpg
   position: PhD. Candicate
   date: Sep. 2024 - Now
 
