--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -54,7 +54,7 @@ education:
 
 
 awards:
-- name: "Second price: in KDD Cup 2024 Multi-task Online Shopping Challenge for LLMs (User Behavior Alignment Track)"
+- name: "<b>Second price:</b> in KDD Cup 2024 Multi-task Online Shopping Challenge for LLMs (User Behavior Alignment Track)"
   date: 2024
 - name: "National Third Prize: Supreme People’s Procuratorate National Procuratorate Big Data Legal Supervision"
   date: 2023
