--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,6 +4,9 @@
 "Xianneng Li":
   url: http://faculty.dlut.edu.cn/li/zh_CN/index.htm
 
+"Yahe Yu":
+  url: http://faculty.dlut.edu.cn/yuyahe/zh_CN/index.htm
+
 "Xiangyu Zhao":
   # name: Charles Green
   url: https://zhaoxyai.github.io/
