--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -19,7 +19,7 @@ gscholar: qCD3ObkAAAAJ
 # orcid: 0000-0000-0000-0000
 
 short_bio: >-
-  Hi! Welcome to my homepage. I’m Yingyi Zhang (张颖异), a PhD. Candidate in joint Dalian University of Technology (DUT) and City University of Hong Kong (CityU). My doctoral research focuses on consumer behavior in e-commerce and recommender systems jointly supervised by Prof. Xianneng Li (at DUT) and Prof. Xiangyu Zhao (at CityU). My interests lie in leveraging advanced technologies such as user behavior modeling and deep learning methods to address management challenges in online e-commerce.
+  Hi! Welcome to my homepage. I’m Yingyi Zhang (张颖异), a PhD candidate at the joint program between Dalian University of Technology (DUT) and City University of Hong Kong (CityU). My doctoral research focuses on consumer behavior in e-commerce and recommender systems, and I am jointly supervised by Prof. Xianneng Li (at DUT) and Prof. Xiangyu Zhao (at CityU). My interests lie in leveraging advanced technologies such as user behavior modeling and deep learning methods to address management challenges in online e-commerce.
 
 portrait_url: /assets/images/photos/zyy.png
 portrait_caption: >-
