--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -54,6 +54,10 @@ education:
 
 
 awards:
+- name: "<strong>🥉Bronze medal</strong> at WWW compitition: Multimodal Dialogue System Intent Recognition Challenge"
+  date: 2024
+- name: "Graduate Research Fund of the School of Economics and Management of Dalian University of Technology (50,000 CNY)"
+  date: 2024
 - name: "<strong>🥈Second price:</strong> in KDD Cup 2024 Multi-task Online Shopping Challenge for LLMs (User Behavior Alignment Track)"
   date: 2024
 - name: "<strong>National Third Prize:</strong> Supreme People’s Procuratorate National Procuratorate Big Data Legal Supervision"
