--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -56,7 +56,7 @@ education:
 awards:
 - name: "<strong>🥉Bronze medal</strong> at WWW compitition: Multimodal Dialogue System Intent Recognition Challenge"
   date: 2025
-- name: "<strong>Graduate Research Fund of the School of Economics and Management of Dalian University of Technology<strong> (50,000 CNY)"
+- name: "<strong>Graduate Research Fund of the School of Economics and Management of Dalian University of Technology</strong> (50,000 CNY)"
   date: 2024
 - name: "<strong>🥈Second price and Student Award:</strong> in KDD Cup 2024 Multi-task Online Shopping Challenge for LLMs (User Behavior Alignment Track)"
   date: 2024
