--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,8 +8,10 @@
   url: http://faculty.dlut.edu.cn/yuyahe/zh_CN/index.htm
 
 "Xiangyu Zhao":
-  # name: Charles Green
   url: https://zhaoxyai.github.io/
+
+"Pengyue Jia":
+  url: https://jia-py.github.io/
 
 # "Charles Green (Stanford)":
 #   name: Charles Green
