--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -54,7 +54,7 @@ main:
   - title: "Enhancing user behavior alignment by input-level model cooperation and model-level parameter optimization"
     authors: <strong>Yingyi Zhang</strong>, Zhipeng Li,Zhewei Zhi, Xianneng Li✉️
     conference_short: Amazon KDD Cup
-    conference: KDD Cup 2024 Workshop: A Multi-task Online Shopping Challenge for Large Language Models <strong>(Amazon KDD Cup)</strong>, 2024.
+    conference: "KDD Cup 2024 Workshop: A Multi-task Online Shopping Challenge for Large Language Models <strong>(Amazon KDD Cup)</strong>, 2024."
     pdf: https://openreview.net/forum?id=fbX9XN3qmS#discussion
     page: https://amazon-kddcup24.github.io/
     # code: https://github.com/MrGiovanni/ContinualLearning
