--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -12,7 +12,7 @@ main:
 
   - title: "Personalize Before Retrieve: LLM-based Personalized Query Expansion for User-Centric Retrieval"
     authors:  <strong>Yingyi Zhang✨</strong>, Pengyue Jia✨,  Derong Xu, Yi Wen, Xianneng Li✉️, Yichao Wang✉️, Wenlin Zhang, Xiaopeng Li, Weinan Gan, Huifeng Guo, Yong Liu, Xiangyu Zhao✉️
-    conference_short: AAAI'26
+    conference_short: AAAI'26-Oral
     conference: The 40th Annual AAAI Conference on Artificial Intelligence <strong>(AAAI'26)</strong>, 2025.
     pdf: https://arxiv.org/pdf/2510.08935
     code: https://github.com/Applied-Machine-Learning-Lab/PBR-code
@@ -81,7 +81,7 @@ main:
     pdf: https://jmsc.tju.edu.cn/jmscen/article/abstract/20240807?st=article_issue
     # code: https://github.com/MrGiovanni/ContinualLearning
     # bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/covers/paper2022.png
+    image: ./assets/img/covers/paper1.png
     notes: The Top 1 Chinese journal in Management and Science
 
 
