--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 
 education:
 - name: City University of Hong Kong
-  logo: ./assets/img/badges/cityu_logo.jpg
+  logo: ./assets/img/badges/cityu_new_logo.png
   position: Ph.D. Candidate
   date: Sep. 2024 - Now
 
