--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,9 +1,11 @@
 awards:
-- name: "<strong>🥉Bronze medal</strong> at WWW compitition: Multimodal Dialogue System Intent Recognition Challenge"
+- name: "<strong>Student Scholarship</strong> prize at AAAI'26 (1,000 USD)"
+  date: 2025
+- name: "<strong>🥉Bronze medal</strong> at WWW compitition: Multimodal Dialogue System Intent Recognition Challenge (7,000 CNY)"
   date: 2025
 - name: "<strong>Graduate Research Fund of the School of Economics and Management of Dalian University of Technology</strong> (50,000 CNY)"
   date: 2024
-- name: "<strong>🥈Second price and Student Award:</strong> in KDD Cup 2024 Multi-task Online Shopping Challenge for LLMs (User Behavior Alignment Track)"
+- name: "<strong>🥈Second price and Student Award:</strong> in KDD Cup 2024 Multi-task Online Shopping Challenge for LLMs at User Behavior Alignment Track (1,750 USD)"
   date: 2024
 - name: "<strong>National Third Prize:</strong> Supreme People’s Procuratorate National Procuratorate Big Data Legal Supervision"
   date: 2023
