--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic Information 
 title: Yingyi Zhang
-position: Joint Ph.D. Candicate (2022~Now)
+position: Joint Ph.D. Candidate (2022~Now)
 affiliation: Dalian University of Technology & City University of Hong Kong
-email: yingyizhang@mail.dlut.edu.cn
+email: yingyizhang(at)mail.dlut.edu.cn
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
