--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,8 @@ font: "Serif" # or "Sans Serif"
 
 # Use this project as a remote theme for GitHub Pages
 # See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
-remote_theme: yaoyao-liu/minimal-light
+# remote_theme: yaoyao-liu/minimal-light
+remote_theme: Zhang-Yingyi/Zhang-Yingyi.github.io
 
 # The following files will be removed from the generated website.
 exclude:
