--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -33,7 +33,7 @@ main:
   - title: "LSRP: A Leader-Subordinate Retrieval Framework for Privacy-Preserving Cloud-Device Collaboration"
     authors: <strong>Yingyi Zhang✨</strong>, Pengyue Jia✨,  Xianneng Li✉️, Derong Xu, Maolin Wang, Yichao Wang, Zhaocheng Du, Huifeng Guo✉️, Yong Liu, Ruiming Tang, Xiangyu Zhao✉️
     conference_short: KDD'25
-    conference: 2025 ACM SIGKDD International Conference on Knowledge Discovery and Data Mining <strong>(KDD'25)</strong>, 2025.
+    conference: The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining <strong>(KDD'25)</strong>, 2025.
     pdf: https://dl.acm.org/doi/10.1145/3711896.3737036
     code: https://github.com/Applied-Machine-Learning-Lab/LSRP
     # bibtex: https://bib.yliu.me/MICCAI23.txt
