--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -52,7 +52,7 @@ main:
     notes: 🥉Bronze Medal
 
   - title: "Enhancing user behavior alignment by input-level model cooperation and model-level parameter optimization"
-    authors: <strong>Yingyi Zhang</strong>, Zhipeng Li,Zhewei Zhi, Xianneng Li✉️
+    authors: <strong>Yingyi Zhang✨</strong>, Zhipeng Li✨,Zhewei Zhi✨, Xianneng Li✉️
     conference_short: Amazon KDD Cup
     conference: "KDD Cup 2024 Workshop: A Multi-task Online Shopping Challenge for Large Language Models <strong>(Amazon KDD Cup)</strong>, 2024."
     pdf: https://openreview.net/forum?id=fbX9XN3qmS#discussion
