--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ email: yingyizhang(at)mail.dlut.edu.cn
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: Personalized RAG
-description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
+# description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
+description: Yingyi Zhang from Dalian University of Technology & City University of Hong Kong.
 canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
