--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,14 @@
 main:
+  - title: "Evoking User Memory: Personalizing LLM via Recollection-Familiarity Adaptive Retrieval"
+    authors:  <strong>Yingyi Zhang✨</strong>, Junyi Li✨, Wenlin Zhang, Pengyue Jia, Xianneng Li✉️, Yichao Wang✉️, Derong Xu, Yi Wen, Huifeng Guo, Yong Liu, Xiangyu Zhao✉️
+    conference_short: ICLR'26
+    conference: The Fourteenth International Conference on Learning Representations, 2026.
+    pdf: https://openreview.net/pdf?id=f7p0F2X6XN
+    code: https://github.com/Applied-Machine-Learning-Lab/ICLR2026_RF-Mem
+    # bibtex: https://bib.yliu.me/MICCAI23.txt
+    image: ./assets/img/covers/RF_Mem.png
+    # notes: Oral
+
   - title: "GeoArena: An Open Platform for Benchmarking Large Vision-language Models on WorldWide Image Geolocalization"
     authors:  Pengyue Jia✨, <strong>Yingyi Zhang✨</strong>, Xiangyu Zhao, Sharon Li
     conference_short: Arxiv
