--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ github_link: https://github.com/Zhang-Yingyi
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
 avatar: ./assets/img/zyy.png
-favicon: ./assets/img/favicon.png
-favicon_dark: ./assets/img/favicon-dark.png
+favicon: ./assets/img/logo.png
+favicon_dark: ./assets/img/logo.png
 
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
